force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map__c/cgc_sync__Sync_Mobile_App_PL_Map__c.object-meta.xml
<CustomObject>
    <description>Mapping Information of Picklists to dropdown boxes on the mobile application</description>
    <label>Mobile App Picklist Mapping</label>
    <nameField>
        <displayFormat>PTM-{0000}</displayFormat>
        <label>Mobile App Picklist Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Picklist Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>