force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map__c/fields/cgc_sync__Field__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Field__c</fullName>
    <description>Salesforce field name.</description>
    <label>Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>