force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map__c/fields/cgc_sync__HasChildren__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__HasChildren__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there is an extension record.</description>
    <label>HasChildren</label>
    <type>Checkbox</type>
</CustomField>