force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map__c/fields/cgc_sync__Mobile_App_Domain__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Mobile_App_Domain__c</fullName>
    <description>Toggle ID.</description>
    <label>Mobile App Domain</label>
    <length>200</length>
    <type>Text</type>
</CustomField>