force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map__c/fields/cgc_sync__Object__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Object__c</fullName>
    <description>Name of the Salesforce entity.</description>
    <label>Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>